--- a/src/main/resources/kr/or/ddit/msg/msg.properties
+++ b/src/main/resources/kr/or/ddit/msg/msg.properties
@@ -1,4 +1,4 @@
 Pattern.user_id=\uc0ac\uc6a9\uc790 ID\ub294 \uccab\ubb38\uc744 \uc601\ubb38\uc790,\uc22b\uc790 \ud3ec\ud568 4~12\uae00\uc790\uc785\ub2c8\ub2e4.
-Pattern.pw=\ube44\ubc00\ubc88\ud638\ub294 \ubb38\uc790,\uc22b\uc790, 1\uac1c\uc774\uc0c1\uc758 \ud2b9\uc218\ubb38\uc790\ub97c \ud3ec\ud568\ud558\uc5ec 8~16\uae00\uc790\ub85c \uc791\uc131\uac00\ub2a5\ud569\ub2c8\ub2e4.
-Pattern.name=\uc774\ub984\uc740 \ud55c\uae00\ub9cc \uac00\ub2a5\ud558\uba70 2~4\uae00\uc790\ub85c \uc785\ub825\ud574\uc8fc\uc138\uc694.
-Pattern.email=\uc774\uba54\uc77c \ud615\uc2dd\uc5d0 \ub9de\uac8c \uc785\ub825\ud574\uc8fc\uc138\uc694.
+Pattern.user_pw=\ube44\ubc00\ubc88\ud638\ub294 \ubb38\uc790,\uc22b\uc790, 1\uac1c\uc774\uc0c1\uc758 \ud2b9\uc218\ubb38\uc790\ub97c \ud3ec\ud568\ud558\uc5ec 8~16\uae00\uc790\ub85c \uc791\uc131\uac00\ub2a5\ud569\ub2c8\ub2e4.
+Pattern.user_name=\uc774\ub984\uc740 \ud55c\uae00\ub9cc \uac00\ub2a5\ud558\uba70 2~4\uae00\uc790\ub85c \uc785\ub825\ud574\uc8fc\uc138\uc694.
+Pattern.user_email=\uc774\uba54\uc77c \ud615\uc2dd\uc5d0 \ub9de\uac8c \uc785\ub825\ud574\uc8fc\uc138\uc694.
