--- a/pom.xml
+++ b/pom.xml
@@ -221,5 +221,29 @@
 			<version>1.5.1</version>
 		</dependency>
 
+
+
+		<!-- 웹 소켓 -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.3.24.RELEASE</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>4.3.24.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>4.3.24.RELEASE</version>
+		</dependency>
+
+
+
 	</dependencies>
 </project>
